<resources>
    <string name="app_name">手机应用商店</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="app_state_download">下载</string>
    <string name="app_state_paused">暂停</string>
    <string name="app_state_error">失败</string>
    <string name="app_state_waiting">等待</string>
    <string name="app_state_downloaded">安装</string>

    <string-array name="tab_names">
        <item>首页</item>
        <item>游戏</item>
        <item>专题</item>
        <item>推荐</item>
        <item>分类</item>
        <item>排行</item>
    </string-array>

    <string name="app_detail">详情页</string>
    <string name="downloading">正在下载</string>
    <string name="empty_layout">这里什么都没有呢~</string>
    <string name="start_all">全部开始</string>
    <string name="pause_all">全部暂停</string>
    <string name="text_delete">删除</string>
    <string name="select_all">全选</string>
    <string name="cancel">取消</string>
    <string name="login">立即登录</string>
    <string name="my_liked_app">我的收藏</string>
    <string name="unliked">取消收藏</string>
    <string name="et_id_hint">请输入手机号码</string>
    <string name="et_pwd_hint">请输入6~10位密码</string>
    <string name="et_user_name_hint">请输入用户名</string>
</resources>
