<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/arrow_left"
            android:text="@string/downloading"
            android:textColor="@color/text_downloading_title_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:padding="4dp"
            android:text="@string/cancel"
            android:textColor="@color/text_downloading_title_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/start_and_pause"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="6dp"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:textColor="@color/text_color_selector"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        tools:text="@string/start_all" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_tip_color_downloading"
        app:layout_constraintTop_toBottomOf="@id/start_and_pause" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/delete_layout"
        app:layout_constraintTop_toBottomOf="@id/start_and_pause"
        tools:visibility="visible"></android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/delete_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_tip_color_downloading" />

        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:text="@string/select_all"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:padding="4dp"
            android:text="@string/text_delete"
            android:textColor="@color/text_black"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_empty_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_layout"
            android:textColor="@color/text_downloading_title_color"
            android:textSize="12sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
